attempted fix at scrollbar background issue

--- a/app/components/ClockBackground/ClockBackground.module.css
+++ b/app/components/ClockBackground/ClockBackground.module.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
